# rust-gl

./: Cargo.toml  README.md
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: draw.rs  lib.rs  program.rs  shader.rs  structs.rs
crates/triangle/: Cargo.toml
crates/triangle/src/: main.rs  triangle.rs
crates/utils/: Cargo.toml
crates/utils/src/: vector.rs
crates/window/: Cargo.toml
crates/window/src/: init.rs  lib.rs
src/: main.rs  render_gl.rs
